--- a/style.css
+++ b/style.css
@@ -811,9 +811,11 @@ ul {
   }
 
   .hero-text h1 {
-    font-size: 1.4em;
-    line-height: 1.4em;
-  }
+  font-size: 2.6rem;
+  text-transform: uppercase;
+  color: #fff;
+  margin-bottom: 80px; /* Plus d’espace */
+}
 @media (max-width: 1024px) {
   /* Hero section visible même avec la navbar */
   .hero {
